--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         Hi! I'm a web developer and graphic designer interested in ambient forms of design.
         I hold a B.F.A of Communication Design from Parsons School of Design.
         In my free time, I enjoy reading, cooking, as well as time off from my computer.
-        My old website can be found <a href="www.haotianwang.net">here</a>.
+        My previous website can be found <a href="https://prof23.netlify.app/">here</a>.
     </h1>
     <br>
     
