--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         My previous website can be found <a href="https://prof23.netlify.app/">here</a>.
     </h1>
     <br>
-    
+    <!-- haha -->
 
       <!-- for mobile -->
         <div id="toggleButton" class="categoriesMenuButton">
