--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
         </div>
         <br>
         <h1 id="currentDateTime">
-          It is <span class="currentTime"></span><span class="js-last-updated"></span>
+          <span class="currentTime"></span>
+          <br>
+          <span class="lastUpdatedBox"></span>
        </h1>
         <!-- <div>
             <button class="categoriesMenuButton">
@@ -72,9 +74,7 @@
             <!-- Link of the week</a></h1>
           </div> -->
    
-
-        
-        
+  
 
 
         <div class="rightScreenContainer">
