--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haotian Wang 2024</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
@@ -16,12 +17,11 @@
       <h1 class="headerInfo"><a href="/cdn-cgi/l/email-protection#2c444d4358454d425b4d424b0248495f454b426c4b414d4540024f4341">haotianwang.design@gmail.com</a></h1>
       <br>
       <h1 class="headerInfo">
-        Hi! I'm a web developer and graphic designer interested in ambient forms of design.
-        I hold a B.F.A of Communication Design from Parsons School of Design.
-        In my free time, I enjoy reading, cooking, as well as time off from my computer.
-        My previous website can be found <a href="https://prof23.netlify.app/">here</a>.
+        Hi! I am a web developer and graphic designer interested in ambient forms of design.
+        Selected work:
     </h1>
     <br>
+    
     <!-- haha -->
 
       <!-- for mobile -->
@@ -56,7 +56,15 @@
             </button>
         </div>
         <br>
-        <h1 id="currentDateTime">
+        <h1 class="headerInfo">
+          I am currently studying computer science at the University of Notre Dame 
+          and hold a BFA in Communication Design from Parsons School of Design.
+          In my free time, I enjoy reading, cooking, as well as time off from my computer.
+          This website is handmade and hosted on GitHub Pages.
+          My previous website can be found <a href="https://prof23.netlify.app/">here</a>.
+        </h1>
+        <br>
+        <h1 id="currentDateTime" class="headerInfo">
           <span class="currentTime"></span>
           <br>
           <span class="lastUpdatedBox"></span>
