--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <br>
       <h1 class="headerInfo">
         Hi! I am a web developer and graphic designer interested in ambient forms of design.
-        Selected work:
+        Some selected work:
     </h1>
     <br>
     
@@ -57,9 +57,8 @@
         </div>
         <br>
         <h1 class="headerInfo">
-          I am currently studying computer science at the University of Notre Dame 
-          and hold a BFA in Communication Design from Parsons School of Design.
-          In my free time, I enjoy reading, cooking, as well as time off from my computer.
+          Currently studying Communication Design at Parsons School of Design.
+          I enjoy reading, cooking, as well as any outdoor activities.
           This website is handmade and hosted on GitHub Pages.
           My previous website can be found <a href="https://prof23.netlify.app/">here</a>.
         </h1>
