--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="/cdn-cgi/l/email-protection#2c444d4358454d425b4d424b0248495f454b426c4b414d4540024f4341">haotianwang.design@gmail.com</a></h1>
       <br>
       <h1 class="headerInfo">
-        Hi! I am a web developer and graphic designer interested in ambient forms of design.
+        Hi! I am an independent web developer and graphic designer interested in ambient forms of design.
         Some selected work:
     </h1>
     <br>
