--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
              <h3>My Senior thesis <a href="https://arcturus0.netlify.app/">Arcturus</a> is a series of ambient poems that explored nonlinear storytelling on the web.
              </h3>
              <div class="imageContainer">
-               <img src="images/me/1.gif" alt="Toggle Image" loading="lazy">
-               <img src="images/me/2.gif" alt="Toggle Image" loading="lazy">
-               <img src="images/me/3.gif" alt="Toggle Image" loading="lazy">
-               <img src="images/me/4.gif" alt="Toggle Image" loading="lazy">
+               <img src="images/1.gif" alt="Toggle Image" loading="lazy">
+               <img src="images/2.gif" alt="Toggle Image" loading="lazy">
+               <img src="images/3.gif" alt="Toggle Image" loading="lazy">
+               <img src="images/4.gif" alt="Toggle Image" loading="lazy">
 
              </div>
      
