--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                   </h3>
                   <div class="imageContainer">
                     <img src="images/machine1.png" alt="Toggle Image" loading="lazy">
-                    <img src="images/cytheria/02.gif" alt="Toggle Image" loading="lazy">
+                    <img src="images/machine2.png" alt="Toggle Image" loading="lazy">
                     <img src="images/cytheria/3.gif" alt="Toggle Image" loading="lazy">
                   </div>
     
