--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="imageContainer">
               <img src="images/put1.png" alt="Toggle Image" loading="lazy">
               <img src="images/put2.png" alt="Toggle Image" loading="lazy">
-              <img src="images/claudia/3.jpg" alt="Toggle Image" loading="lazy">
+              <img src="images/put3.png" alt="Toggle Image" loading="lazy">
             </div>
   
             </div>
@@ -123,7 +123,7 @@
                   <div class="imageContainer">
                     <img src="images/machine1.png" alt="Toggle Image" loading="lazy">
                     <img src="images/machine2.png" alt="Toggle Image" loading="lazy">
-                    <img src="images/cytheria/3.gif" alt="Toggle Image" loading="lazy">
+                    <img src="images/machine3.png" alt="Toggle Image" loading="lazy">
                   </div>
     
                 </div>
