--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   </h3>
                   <div class="imageContainer">
                     <img src="images/spring1.png" alt="Toggle Image" loading="lazy">
-                    <img src="images/erin/2.jpg" alt="Toggle Image" loading="lazy"
+                    <img src="images/spring2.jpg" alt="Toggle Image" loading="lazy"
                     <img src="images/erin/3.jpg" alt="Toggle Image" loading="lazy">
                   </div>
           
@@ -144,7 +144,7 @@
                 </h3>
                 <div class="imageContainer">
                   <img src="images/home1.png" alt="Toggle Image" loading="lazy">
-                  <img src="images/erin/2.jpg" alt="Toggle Image" loading="lazy"
+                  <img src="images/home2.png" alt="Toggle Image" loading="lazy"
                   <img src="images/erin/3.jpg" alt="Toggle Image" loading="lazy">
                 </div>
             </div>
