--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                   </h3>
                   <div class="imageContainer">
                     <img src="images/spring1.png" alt="Toggle Image" loading="lazy">
-                    <img src="images/spring2.jpg" alt="Toggle Image" loading="lazy"
-                    <img src="images/erin/3.jpg" alt="Toggle Image" loading="lazy">
+                    <img src="images/spring2.jpg" alt="Toggle Image" loading="lazy">
+                    <!-- <img src="images/erin/3.jpg" alt="Toggle Image" loading="lazy"> -->
                   </div>
           
                 </div>
@@ -149,8 +149,8 @@
                 </h3>
                 <div class="imageContainer">
                   <img src="images/home1.png" alt="Toggle Image" loading="lazy">
-                  <img src="images/home2.png" alt="Toggle Image" loading="lazy"
-                  <img src="images/erin/3.jpg" alt="Toggle Image" loading="lazy">
+                  <img src="images/home2.png" alt="Toggle Image" loading="lazy">
+                  <!-- <img src="images/erin/3.jpg" alt="Toggle Image" loading="lazy"> -->
                 </div>
             </div>
 
@@ -161,8 +161,9 @@
               </h3>
               <div class="imageContainer">
                 <img src="images/class1.png" alt="Toggle Image" loading="lazy">
-                <img src="images/class2.png" alt="Toggle Image" loading="lazy"
+                <img src="images/class2.png" alt="Toggle Image" loading="lazy">
                 <img src="images/class3.png" alt="Toggle Image" loading="lazy">
+                <img src="images/class4.png" alt="Toggle Image" loading="lazy">
               </div>
           </div>
 
