--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
         <br>
         <h1 class="headerInfo">
-          Currently studying Communication Design at Parsons School of Design.
+          Currently studying Computer Science at the University of Notre Dame.
           I enjoy reading, cooking, as well as any outdoor activities.
           This website is handmade and hosted on GitHub Pages.
           My previous website can be found <a href="https://prof23.netlify.app/">here</a>.
